# Currency-Exchanger-API

./: .env.dist  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
common/: exceprions.py
core/: currencyapi.py  settings.py  urls.py
rates/: serializers.py  services.py  urls.py  views.py
